--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,16 @@ server.port=8082
 #spring.sql.init.schema-locations=classpath*:database/initDB.sql
 #spring.sql.init.data-locations=classpath*:database/fillDB.sql
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/delivery_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/delivery_db?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=Qwerty123
 #spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=validate
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
