+ search nearest delivery points

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8080
 
 #spring.sql.init.enabled=true
 #spring.sql.init.schema-locations=classpath*:database/initDB.sql
@@ -17,3 +17,21 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=validate
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+# СТРУКТУРА ДАННЫХ ---------------------------------------
+
+db.table.delivery_point =
+
+# ПАРАМЕТРЫ ПОИСКА ТОЧЕК НА КАРТЕ ------------------------
+
+# начальный размер квадрат поиска
+search.start.square.size = 10
+
+# шаг увеличения квадрата поиска
+search.sizing.step = 5
+
+# количество итераций расширения зоны поиска
+search.iteration = 3
+
+# количество искомых точек в квадрате
+search.count = 3
